--- a/index.html
+++ b/index.html
@@ -31,7 +31,61 @@
     <title>Aisha Natividad | Front-End Developer Portfolio</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <p>Testing out this font!</p>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">AISHA NATIVIDAD</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/about.html"
+                >ABOUT</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/portfolio.html">PORTFOLIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/contact.html">CONTACT</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="hero-section">
+      <div class="row">
+        <div class="col">
+          <img src="images/Hello.svg" class="hero-hello img-fluid" />
+        </div>
+        <div class="col introduction">
+          <div>
+            <h1>Nice to meet you</h1>
+            <p>
+              My name is Aisha Natividad and I'm an aspiring front-end developer
+              based in Honolulu, HI.
+            </p>
+            <br />
+            <div class="hero-buttons">
+              <div>
+                <a class="hero-portfolio-btn" href="/portfolio.html">
+                  My Portfolio
+                </a>
+                <a class="hero-contact-btn" href="contact.html">Contact Me</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
