--- a/portfolio.html
+++ b/portfolio.html
@@ -48,12 +48,12 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/about.html"
+              <a class="nav-link" aria-current="page" href="/about.html"
                 >ABOUT</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/portfolio.html">PORTFOLIO</a>
+              <a class="nav-link active" href="/portfolio.html">PORTFOLIO</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/contact.html">CONTACT</a>
