--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/958f92dfa4.js"
+      crossorigin="anonymous"
+    ></script>
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -65,7 +70,7 @@
     <div class="hero-section">
       <div class="row">
         <div class="col">
-          <img src="images/Hello.svg" class="hero-hello img-fluid" />
+          <img src="images/Hello.svg" class="hero-picture img-fluid" />
         </div>
         <div class="col introduction">
           <div>
@@ -84,6 +89,51 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+    <div class="row about-section">
+      <div class="col">
+        <img src="images/Socials.svg" class="about-home-picture img-fluid" />
+      </div>
+      <div class="col">
+        <h2>A little bit about me...</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </div>
+    </div>
+    <div class="lets-connect text-center">
+      <h2>Let's Connect!</h2>
+      <br />
+      <div class="row">
+        <div class="col">
+          <h3>Portfolio</h3>
+          <a href="portfolio.html"><i class="fas fa-folder-open fa-5x"></i></a>
+          <p>Check out some of my work!</p>
+        </div>
+        <div class="col">
+          <h3>Contact</h3>
+          <a href="contact.html">
+            <i class="fas fa-envelope fa-5x"></i>
+          </a>
+          <p>Interested in working together? Send me an email!</p>
+        </div>
+        <div class="col">
+          <h3>LinkedIn</h3>
+          <a
+            href="https://www.linkedin.com/in/aisha-frances-natividad-3130b5129/"
+            target="_blank"
+          >
+            <i class="fab fa-linkedin fa-5x"></i
+          ></a>
+          <p>Stay connected with me on LinkedIn</p>
         </div>
       </div>
     </div>
