--- a/index.html
+++ b/index.html
@@ -94,19 +94,22 @@
     </div>
     <div class="row about-section">
       <div class="col">
-        <img src="images/Socials.svg" class="about-home-picture img-fluid" />
+        <img src="images/RECOERY.svg" class="about-home-picture img-fluid" />
       </div>
       <div class="col">
-        <h2>A little bit about me...</h2>
+        <h2>"What is marketing?"</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          I asked this question continuously throughout my college career and I
+          quickly learned that marketing is a dynamic component that encompasses
+          endless paths of opportunity. So throughout college, I strived to
+          expose myself to as many departments of marketing as possible: from
+          business development to PR to directing a team of students in a
+          non-profit dance marathon! However, my journey towards being a
+          front-end developer sparked when I launched my career as a Marketing
+          Specialist at Mockingbird Marketing. A task as simple as editing an H1
+          peaked my curiousity and made me question, "What else can I edit?"
         </p>
+        <a href="about.html" class="learn-more-link">Learn more →</a>
       </div>
     </div>
     <div class="lets-connect text-center">
@@ -115,25 +118,31 @@
       <div class="row">
         <div class="col">
           <h3>Portfolio</h3>
-          <a href="portfolio.html"><i class="fas fa-folder-open fa-5x"></i></a>
-          <p>Check out some of my work!</p>
+          <a href="portfolio.html" class="socials"
+            ><i class="fas fa-folder-open fa-5x"></i
+          ></a>
+          <p class="social-CTA">Check out some of my work</p>
         </div>
         <div class="col">
           <h3>Contact</h3>
-          <a href="contact.html">
+          <a href="contact.html" class="socials">
             <i class="fas fa-envelope fa-5x"></i>
           </a>
-          <p>Interested in working together? Send me an email!</p>
+          <p class="social-CTA">
+            Interested in working together? <br />
+            Send me an email!
+          </p>
         </div>
         <div class="col">
           <h3>LinkedIn</h3>
           <a
             href="https://www.linkedin.com/in/aisha-frances-natividad-3130b5129/"
             target="_blank"
+            class="socials"
           >
             <i class="fab fa-linkedin fa-5x"></i
           ></a>
-          <p>Stay connected with me on LinkedIn</p>
+          <p class="social-CTA">Stay connected with me on LinkedIn</p>
         </div>
       </div>
     </div>
