--- a/index.html
+++ b/index.html
@@ -81,19 +81,17 @@
             </p>
             <br />
             <div class="hero-buttons">
-              <div>
-                <a class="hero-portfolio-btn" href="/portfolio.html">
-                  My Portfolio
-                </a>
-                <a class="hero-contact-btn" href="contact.html">Contact Me</a>
-              </div>
+              <a class="hero-portfolio-btn" href="/portfolio.html">
+                My Portfolio
+              </a>
+              <a class="hero-contact-btn" href="contact.html">Contact Me</a>
             </div>
           </div>
         </div>
       </div>
     </div>
     <div class="row about-section">
-      <div class="col">
+      <div class="col about-picture-section">
         <img src="images/RECOERY.svg" class="about-home-picture img-fluid" />
       </div>
       <div class="col">
