--- a/index.html
+++ b/index.html
@@ -69,17 +69,17 @@
     </nav>
     <div class="hero-section">
       <div class="row">
-        <div class="col">
+        <div class="col hero-picture-section">
           <img src="images/Hello.svg" class="hero-picture img-fluid" />
         </div>
         <div class="col introduction">
           <div>
-            <h1>Nice to meet you</h1>
+            <h1>Nice to meet you!</h1>
             <p>
               My name is Aisha Natividad and I'm an aspiring front-end developer
               based in Honolulu, HI.
             </p>
-            <br />
+            <br class="hero-break" />
             <div class="hero-buttons">
               <a class="hero-portfolio-btn" href="/portfolio.html">
                 My Portfolio
@@ -102,10 +102,13 @@
           endless paths of opportunity. So throughout college, I strived to
           expose myself to as many departments of marketing as possible: from
           business development to PR to directing a team of students in a
-          non-profit dance marathon! However, my journey towards being a
-          front-end developer sparked when I launched my career as a Marketing
-          Specialist at Mockingbird Marketing. A task as simple as editing an H1
-          peaked my curiousity and made me question, "What else can I edit?"
+          non-profit dance marathon!
+          <span class="desktop-description">
+            However, my journey towards being a front-end developer sparked when
+            I launched my career as a Marketing Specialist at Mockingbird
+            Marketing. A task as simple as editing an H1 peaked my curiousity
+            and made me question, "What else can I edit?"
+          </span>
         </p>
         <a href="about.html" class="learn-more-link">Learn more →</a>
       </div>
