--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/styles.css" />
-    <title>Contact Aisha Natividad | Front-End Developer Portfolio</title>
+    <title>About Aisha Natividad | Front-End Developer Portfolio</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -67,7 +67,60 @@
         </div>
       </div>
     </nav>
-    <h1>Hello World!</h1>
-    <p>Testing out this font!</p>
+    <div class="row about-me-introduction">
+      <div class="col about-me-introduction-picture">
+        <img src="images/Socials.svg" class="img-fluid" />
+      </div>
+      <div class="col about-me-introduction-blurb">
+        <h1>Hawai'i Born and Raised...</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </div>
+    </div>
+    <div class="row about-me-linkedin-section">
+      <div class="col about-me-recommendations">
+        <h2>LinkedIn Recommendations</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </div>
+      <div class="col about-me-recommendation-picture">
+        <img src="images/ThankYou.svg" class="linkedin-picture" />
+      </div>
+    </div>
+    <div class="row contact-me-section">
+      <div class="col contact-me-picture">
+        <img src="images/TECHNOLOGY.svg" />
+      </div>
+      <div class="col contact-me-blurb">
+        <div>
+          <h2>Contact Me</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="test"></div>
   </body>
 </html>
