--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
         </div>
       </div>
     </div>
-    <div class="row about-section">
-      <div class="col about-picture-section">
-        <img src="images/RECOERY.svg" class="about-home-picture img-fluid" />
+    <div class="row home-about-section">
+      <div class="col home-about-picture-section">
+        <img src="images/RECOERY.svg" class="home-about-picture img-fluid" />
       </div>
       <div class="col">
         <h2>"What is marketing?"</h2>
@@ -110,10 +110,10 @@
             and made me question, "What else can I edit?"
           </span>
         </p>
-        <a href="about.html" class="learn-more-link">Learn more →</a>
+        <a href="about.html" class="home-learn-more-link">Learn more →</a>
       </div>
     </div>
-    <div class="lets-connect text-center">
+    <div class="home-lets-connect text-center">
       <h2>Let's Connect!</h2>
       <br />
       <div class="row">
