About page framework and responsiveness

--- a/about.html
+++ b/about.html
@@ -69,18 +69,23 @@
     </nav>
     <div class="row about-me-introduction">
       <div class="col about-me-introduction-picture">
-        <img src="images/Socials.svg" class="img-fluid" />
+        <img src="images/plane.png" class="img-fluid" />
       </div>
       <div class="col about-me-introduction-blurb">
-        <h1>Hawai'i Born and Raised...</h1>
+        <h1 class="about-me-header">An Untraditional Path</h1>
+        <h3>From Hawai'i to Seattle to wherever the wind blows next</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          With a double major in Marketing and Management and a minor in
+          Innovation and Entrepreneurship, I was ready to dive into the world of
+          marketing with the goal of meeting people, running accounts and
+          strategizing success. Being exposed to website development in current
+          role, however, led to an endless rabbit hole full of challenges that
+          began to excite and inspire me. While I had never seen myself as a
+          front-end developer, I’m glad I took a leap of faith with Shecodes.io
+          and began learning because it’s a career path that has everything I
+          ever imagined and more: logical thinking, creative problem-solving and
+          a constantly changing environment. So bring your marketing needs and
+          let's see what I can create for you!
         </p>
       </div>
     </div>
@@ -88,39 +93,66 @@
       <div class="col about-me-recommendations">
         <h2>LinkedIn Recommendations</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          <i>
+            " I had the privilege to supervise, advise, and mentor Aisha during
+            her time as the Director of Communications for Seattle University
+            Dance Marathon. Aisha is a passionate, thoughtful, and meticulous
+            leader. She demonstrates the balance between professionalism and
+            being able to truly have fun in her work; which is important! It has
+            been a joy to witness her growth over the past year and I am
+            confident that Aisha will be an excellent asset to any profession or
+            career she chooses to pursue. "
+          </i>
         </p>
-      </div>
-      <div class="col about-me-recommendation-picture">
-        <img src="images/ThankYou.svg" class="linkedin-picture" />
-      </div>
-    </div>
-    <div class="row contact-me-section">
-      <div class="col contact-me-picture">
-        <img src="images/TECHNOLOGY.svg" />
-      </div>
-      <div class="col contact-me-blurb">
-        <div>
-          <h2>Contact Me</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
-          </p>
+        <h3>- De'Andre Jones, M.Ed.</h3>
+        <div class="more-recommendations">
+          <a
+            href="https://www.linkedin.com/in/aisha-frances-natividad-3130b5129/"
+            target="_blank"
+            class="more-recommendations-link"
+            >See more recommendations →</a
+          >
         </div>
       </div>
+      <div class="col about-me-recommendation-picture">
+        <img src="images/ThankYou.svg" class="linkedin-picture img-fluid" />
+      </div>
     </div>
-
-    <div class="test"></div>
+    <footer>
+      <div class="home-lets-connect text-center about-footer">
+        <h2>Let's Connect!</h2>
+        <br />
+        <div class="row">
+          <div class="col">
+            <h3>Portfolio</h3>
+            <a href="portfolio.html" class="about-socials"
+              ><i class="fas fa-folder-open fa-5x"></i
+            ></a>
+            <p class="social-CTA">Check out some of my work</p>
+          </div>
+          <div class="col">
+            <h3>Contact</h3>
+            <a href="mailto:aisha.belmonte@gmail.com" class="about-socials">
+              <i class="fas fa-envelope fa-5x"></i>
+            </a>
+            <p class="social-CTA">
+              Interested in working together? <br />
+              Send me an email!
+            </p>
+          </div>
+          <div class="col">
+            <h3>LinkedIn</h3>
+            <a
+              href="https://www.linkedin.com/in/aisha-frances-natividad-3130b5129/"
+              target="_blank"
+              class="about-socials"
+            >
+              <i class="fab fa-linkedin fa-5x"></i
+            ></a>
+            <p class="social-CTA">Stay connected with me on LinkedIn</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
