--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
     <title>About Aisha Natividad | Front-End Developer Portfolio</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">AISHA NATIVIDAD</a>
         <button
