--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/styles.css" />
-    <title>Contact Aisha Natividad | Front-End Developer Portfolio</title>
+    <title>Examples Aisha Natividad | Front-End Developer Portfolio</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -67,7 +67,76 @@
         </div>
       </div>
     </nav>
-    <h1>Hello World!</h1>
-    <p>Testing out this font!</p>
+    <div class="row portfolio-header">
+      <div class="col">
+        <h1 class="text-center mb-3">Examples of my work</h1>
+
+        <div
+          id="carouselExampleDark"
+          class="carousel carousel-dark slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#carouselExampleDark"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleDark"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="10000">
+              <img
+                src="/images/CLAPPING.png
+          "
+                class="d-block w-40"
+                alt="..."
+              />
+              <div class="carousel-caption d-none d-md-block">
+                <div class="light-text-background">
+                  <h2>Did you know you can create your own keyboard?</h2>
+                  <p>Read more about the hobby on this page I built</p>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="10000">
+              <img src="/images/boot.png" class="d-block w-40" alt="..." />
+              <div class="carousel-caption d-none d-md-block">
+                <div class="light-text-background">
+                  <h2>Wondering what the weather looks like today?</h2>
+                  <p>Check out this weather app I built!</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleDark"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleDark"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
