--- a/portfolio.html
+++ b/portfolio.html
@@ -138,5 +138,41 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="home-lets-connect text-center">
+        <h2>Let's Connect!</h2>
+        <br />
+        <div class="row">
+          <div class="col">
+            <h3>Portfolio</h3>
+            <a href="portfolio.html" class="socials"
+              ><i class="fas fa-folder-open fa-5x"></i
+            ></a>
+            <p class="social-CTA">Check out some of my work</p>
+          </div>
+          <div class="col">
+            <h3>Contact</h3>
+            <a href="mailto:aisha.belmonte@gmail.com" class="socials">
+              <i class="fas fa-envelope fa-5x"></i>
+            </a>
+            <p class="social-CTA">
+              Interested in working together? <br />
+              Send me an email!
+            </p>
+          </div>
+          <div class="col">
+            <h3>LinkedIn</h3>
+            <a
+              href="https://www.linkedin.com/in/aisha-frances-natividad-3130b5129/"
+              target="_blank"
+              class="socials"
+            >
+              <i class="fab fa-linkedin fa-5x"></i
+            ></a>
+            <p class="social-CTA">Stay connected with me on LinkedIn</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
