--- a/portfolio.html
+++ b/portfolio.html
@@ -102,8 +102,13 @@
               />
               <div class="carousel-caption d-none d-md-block">
                 <div class="light-text-background">
-                  <h2>Did you know you can create your own keyboard?</h2>
-                  <p>Read more about the hobby on this page I built</p>
+                  <h2>Custom Keyboard Building</h2>
+                  <a
+                    href="https://hungry-bartik-e3958a.netlify.app/"
+                    target="_blank"
+                    class="examples-link"
+                    >Read more about the hobby and my journey</a
+                  >
                 </div>
               </div>
             </div>
@@ -111,8 +116,13 @@
               <img src="/images/boot.png" class="d-block w-40" alt="..." />
               <div class="carousel-caption d-none d-md-block">
                 <div class="light-text-background">
-                  <h2>Wondering what the weather looks like today?</h2>
-                  <p>Check out this weather app I built!</p>
+                  <h2>What's the Weather Today?</h2>
+                  <a
+                    href="https://zealous-fermat-0b0ab0.netlify.app/"
+                    target="_blank"
+                    class="examples-link"
+                    >Check out this weather app I built!</a
+                  >
                 </div>
               </div>
             </div>
