Portfolio page responsiveness

--- a/portfolio.html
+++ b/portfolio.html
@@ -100,7 +100,7 @@
                 class="d-block w-40"
                 alt="..."
               />
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption d-md-block">
                 <div class="light-text-background">
                   <h2>Custom Keyboard Building</h2>
                   <a
@@ -114,7 +114,7 @@
             </div>
             <div class="carousel-item" data-bs-interval="10000">
               <img src="/images/boot.png" class="d-block w-40" alt="..." />
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption d-md-block">
                 <div class="light-text-background">
                   <h2>What's the Weather Today?</h2>
                   <a
