Contact page and responsiveness

--- a/portfolio.html
+++ b/portfolio.html
@@ -149,7 +149,7 @@
       </div>
     </div>
     <footer>
-      <div class="home-lets-connect text-center">
+      <div class="lets-connect text-center">
         <h2>Let's Connect!</h2>
         <br />
         <div class="row">
