--- a/contact.html
+++ b/contact.html
@@ -36,38 +36,109 @@
     <title>Contact Aisha Natividad | Front-End Developer Portfolio</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/">AISHA NATIVIDAD</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/about.html"
-                >ABOUT</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/portfolio.html">PORTFOLIO</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="/contact.html">CONTACT</a>
-            </li>
-          </ul>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">AISHA NATIVIDAD</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="/about.html"
+                  >ABOUT</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/portfolio.html">PORTFOLIO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="/contact.html">CONTACT</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <div class="contact-header text-center">
+      <h1>Interested in collaborating?</h1>
+      <h3>When you work with me, you'll get someone skilled in:</h3>
+      <div class="row mt-4 skillset">
+        <div class="col">
+          <i class="fab fa-html5 fa-5x"></i>
+          <p>HTML</p>
+        </div>
+        <div class="col">
+          <i class="fab fa-css3-alt fa-5x"></i>
+          <p>CSS</p>
+        </div>
+        <div class="col">
+          <i class="fab fa-js-square fa-5x"></i>
+          <p>Javascript</p>
+        </div>
+        <div class="col">
+          <i class="fab fa-bootstrap fa-5x"></i>
+          <p>Bootstrap</p>
+        </div>
+        <div class="col">
+          <i class="fab fa-github fa-5x"></i>
+          <p>GitHub</p>
+        </div>
+        <div class="col">
+          <i class="fab fa-google fa-5x"></i>
+          <p class="seo">
+            Search Engine <br />
+            Optimization
+          </p>
+          <p class="seo-short">SEO</p>
         </div>
       </div>
-    </nav>
-    <h1>Hello World!</h1>
-    <p>Testing out this font!</p>
+      <h3>And more!</h3>
+    </div>
+    <footer class="dark-footer">
+      <div class="lets-connect text-center">
+        <h2>Let's Connect</h2>
+        <br />
+        <div class="row">
+          <div class="col">
+            <h3>Portfolio</h3>
+            <a href="portfolio.html" class="about-socials"
+              ><i class="fas fa-folder-open fa-5x"></i
+            ></a>
+            <p class="social-CTA">Check out some of my work</p>
+          </div>
+          <div class="col">
+            <h3>Contact</h3>
+            <a href="mailto:aisha.belmonte@gmail.com" class="about-socials">
+              <i class="fas fa-envelope fa-5x"></i>
+            </a>
+            <p class="social-CTA">
+              Interested in working together? <br />
+              Send me an email!
+            </p>
+          </div>
+          <div class="col">
+            <h3>LinkedIn</h3>
+            <a
+              href="https://www.linkedin.com/in/aisha-frances-natividad-3130b5129/"
+              target="_blank"
+              class="about-socials"
+            >
+              <i class="fab fa-linkedin fa-5x"></i
+            ></a>
+            <p class="social-CTA">Stay connected with me on LinkedIn</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
