homepage responsiveness and favicon

--- a/about.html
+++ b/about.html
@@ -34,6 +34,7 @@
     />
     <link rel="stylesheet" href="src/styles.css" />
     <title>About Aisha Natividad | Front-End Developer Portfolio</title>
+    <link rel="shortcut icon" type="image/png" href="images/Glasses.png" />
   </head>
   <body>
     <header>
