--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     />
     <link rel="stylesheet" href="src/styles.css" />
     <title>Aisha Natividad | Front-End Developer Portfolio</title>
+    <link rel="shortcut icon" type="image/png" href="images/Glasses.png" />
   </head>
   <body>
     <header>
@@ -84,10 +85,12 @@
             </p>
             <br class="hero-break" />
             <div class="hero-buttons">
-              <a class="hero-portfolio-btn" href="/portfolio.html">
+              <a class="hero-portfolio-btn text-center" href="/portfolio.html">
                 My Portfolio
               </a>
-              <a class="hero-contact-btn" href="contact.html">Contact Me</a>
+              <a class="hero-contact-btn text-center" href="contact.html"
+                >Contact Me</a
+              >
             </div>
           </div>
         </div>
