--- a/portfolio.html
+++ b/portfolio.html
@@ -34,6 +34,7 @@
     />
     <link rel="stylesheet" href="src/styles.css" />
     <title>Examples Aisha Natividad | Front-End Developer Portfolio</title>
+    <link rel="shortcut icon" type="image/png" href="images/Glasses.png" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -150,7 +151,7 @@
     </div>
     <footer>
       <div class="lets-connect text-center">
-        <h2>Let's Connect!</h2>
+        <h2>Let's Connect</h2>
         <br />
         <div class="row">
           <div class="col">
