--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">AISHA NATIVIDAD</a>
           <button
@@ -73,7 +73,6 @@
         </div>
       </nav>
     </header>
-
     <div class="row about-me-introduction">
       <div class="col about-me-introduction-picture">
         <img src="images/plane.png" class="img-fluid" />
