--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" type="image/png" href="images/Glasses.png" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">AISHA NATIVIDAD</a>
         <button
