optimized for SEO, cleaned up CSS

--- a/about.html
+++ b/about.html
@@ -34,6 +34,10 @@
     />
     <link rel="stylesheet" href="src/styles.css" />
     <title>About Aisha Natividad | Front-End Developer Portfolio</title>
+    <meta
+      name="description"
+      content="Learn more about front-end developer, Aisha Natividad, and contact her today for creative solutions to your marketing problems."
+    />
     <link rel="shortcut icon" type="image/png" href="images/Glasses.png" />
   </head>
   <body>
@@ -70,7 +74,7 @@
     </nav>
     <div class="row about-me-introduction">
       <div class="col about-me-introduction-picture">
-        <img src="images/plane.png" class="img-fluid" />
+        <img src="images/plane.png" class="img-fluid" alt="plane" />
       </div>
       <div class="col about-me-introduction-blurb">
         <h1 class="about-me-header">An Untraditional Path</h1>
@@ -116,7 +120,11 @@
         </div>
       </div>
       <div class="col about-me-recommendation-picture">
-        <img src="images/ThankYou.svg" class="linkedin-picture img-fluid" />
+        <img
+          src="images/ThankYou.svg"
+          class="linkedin-picture img-fluid"
+          alt="thumbs up"
+        />
       </div>
     </div>
     <footer class="dark-footer">
