--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,10 @@
     />
     <link rel="stylesheet" href="src/styles.css" />
     <title>Contact Aisha Natividad | Front-End Developer Portfolio</title>
+    <meta
+      name="description"
+      content="Contact front-end developer, Aisha Natividad, for creative solutions to your marketing problems."
+    />
     <link rel="shortcut icon" type="image/png" href="images/Glasses.png" />
   </head>
   <body>
