--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
     />
     <link rel="stylesheet" href="src/styles.css" />
     <title>Aisha Natividad | Front-End Developer Portfolio</title>
+    <meta
+      name="description"
+      content="Learn more about front-end developer, Aisha Natividad, and view her portfolio today! Contact her for creative solutions to your marketing problems."
+    />
     <link rel="shortcut icon" type="image/png" href="images/Glasses.png" />
   </head>
   <body>
@@ -71,7 +75,11 @@
     <div class="hero-section">
       <div class="row">
         <div class="col hero-picture-section">
-          <img src="images/Hello.svg" class="hero-picture img-fluid" />
+          <img
+            src="images/Hello.svg"
+            class="hero-picture img-fluid"
+            alt="hello greeting"
+          />
         </div>
         <div class="col introduction">
           <div>
@@ -95,7 +103,11 @@
     </div>
     <div class="row home-about-section">
       <div class="col home-about-picture-section">
-        <img src="images/RECOERY.svg" class="home-about-picture img-fluid" />
+        <img
+          src="images/RECOERY.svg"
+          class="home-about-picture img-fluid"
+          alt="brain image"
+        />
       </div>
       <div class="col">
         <h2>"What is marketing?"</h2>
