--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,13 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/styles.css" />
-    <title>Examples Aisha Natividad | Front-End Developer Portfolio</title>
+    <title>
+      Work Examples by Aisha Natividad | Front-End Developer Portfolio
+    </title>
+    <meta
+      name="description"
+      content="View work examples by front-end developer, Aisha Natividad, and contact her today for creative solutions to your marketing problems."
+    />
     <link rel="shortcut icon" type="image/png" href="images/Glasses.png" />
   </head>
   <body>
@@ -99,7 +105,7 @@
                 src="/images/CLAPPING.png
           "
                 class="d-block w-40"
-                alt="..."
+                alt="hands"
               />
               <div class="carousel-caption d-md-block">
                 <div class="light-text-background">
@@ -114,7 +120,7 @@
               </div>
             </div>
             <div class="carousel-item" data-bs-interval="10000">
-              <img src="/images/boot.png" class="d-block w-40" alt="..." />
+              <img src="/images/boot.png" class="d-block w-40" alt="boots" />
               <div class="carousel-caption d-md-block">
                 <div class="light-text-background">
                   <h2>What's the Weather Today?</h2>
