added source code

--- a/index.html
+++ b/index.html
@@ -162,6 +162,16 @@
             <p class="social-CTA">Stay connected with me on LinkedIn</p>
           </div>
         </div>
+        <br />
+        <h5>
+          This website was coded by Aisha Natividad and is
+          <a
+            href="https://github.com/abelmontea/Portfolio-Aisha"
+            target="_blank"
+            class="open-source-link"
+            >open-sourced
+          </a>
+        </h5>
       </div>
     </footer>
   </body>
