--- a/portfolio.html
+++ b/portfolio.html
@@ -110,7 +110,7 @@
                   <div class="light-text-background">
                     <h2>Custom Keyboard Building</h2>
                     <a
-                      href="https://hungry-bartik-e3958a.netlify.app/"
+                      href="https://belmontea-keyboard.netlify.app/"
                       target="_blank"
                       class="examples-link"
                       >Read more about the hobby and my journey</a
@@ -124,7 +124,7 @@
                   <div class="light-text-background">
                     <h2>What's the Weather Today?</h2>
                     <a
-                      href="https://suspicious-rosalind-4eb89f.netlify.app/"
+                      href="https://belmontea-weather-app.netlify.app/"
                       target="_blank"
                       class="examples-link"
                       >Check out this weather app I built!</a
